name:                json-conduit
version:             0.1.0.0
synopsis:            Efficently encode valid JSON with conduit
description:         See README.md
homepage:            https://github.com/fpco/libraries
license:             AllRightsReserved
license-file:        LICENSE
author:              Michael Sloan
maintainer:          sloan@fpcomplete.com
copyright:           FP Complete
category:            Conduit
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >= 1.10

library
  exposed-modules:     Data.Conduit.Bind
                       Data.Conduit.Json.Encode
                       Data.Conduit.Json.Encode.Internal
  build-depends:       base
                     , bytestring
                     , conduit
                     , conduit-extra
                     , scientific
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
