name:                th-type-hash
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            http://github.com/fpco/th-type-hash#readme
license:             AllRightsReserved
license-file:        LICENSE
author:              Michael Sloan
maintainer:          sloan@fpcomplete.com
copyright:           2016 FP Complete
category:            Template Haskell
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.Haskell.TH.TypeHash
  build-depends:       base >= 4.7 && < 5
                     , syb
                     , template-haskell
                     , th-orphans
                     , th-reify-many
                     , store
                     , cryptohash
                     , bytestring
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/fpco/th-type-hash
