name:                thread-file-logger
version:             0.1.0.0
synopsis:            Hacky thread file logger
description:         See README.md
homepage:            https://github.com/fpco/libraries
license:             AllRightsReserved
license-file:        LICENSE
author:              Michael Sloan
maintainer:          sloan@fpcomplete.com
copyright:           FP Complete
category:            System
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >= 1.10

Flag enable
  Description:       Enable thread file logging (instead of plain stdout)
  Default:           False

library
  exposed-modules:     FP.ThreadFileLogger
  build-depends:       base
                     , async
                     , bytestring
                     , classy-prelude
                     , containers
                     , directory
                     , fast-logger
                     , monad-control
                     , monad-logger
                     , template-haskell
                     , text
                     , transformers-base
                     , unix
                     , system-filepath
                     , lifted-base
                     , filepath
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  if flag(enable)
    ghc-options:       -DENABLE_THREAD_FILE_LOGGER
