name:                work-queue
version:             0.1.1.0
synopsis:            Local and distributed work queue implementation
description:         See README.md
homepage:            https://github.com/fpco/libraries
license:             AllRightsReserved
license-file:        LICENSE
author:              Michael Snoyman
maintainer:          michael@fpcomplete.com
copyright:           FP Complete
category:            Concurrency
build-type:          Custom
extra-source-files:  README.md
cabal-version:       >= 1.10

library
  exposed-modules:     Distributed.Types
                       Data.Store.TypeHash.Orphans
                       Distributed.JobQueue.Client
                       Distributed.JobQueue.Worker
                       Distributed.JobQueue.MasterOrSlave
                       Distributed.JobQueue.Status
                       Distributed.JobQueue.Internal
                       Distributed.Redis
                       Distributed.Heartbeat
                       Distributed.RequestSlaves
                       Data.Streaming.NetworkMessage
                       Distributed.Stateful.Master
                       Distributed.Stateful.Slave
                       Distributed.Stateful
                       Distributed.Stateful.Internal
                       Data.WorkQueue
                       Control.Concurrent.ThreadPool
                       Control.Exception.Mask
  other-modules:       Data.SimpleSupply
  build-depends:       base
                     , stm-chans
                     , lens
                     , aeson
                     , async
                     , base64-bytestring
                     , bytestring
                     , classy-prelude
                     , conduit-extra
                     , cryptohash
                     , deepseq
                     , exceptions
                     , executable-hash >= 0.2.0.0
                     , focus
                     , ghc-prim
                     , lifted-base
                     , list-t
                     , monad-control
                     , monad-logger
                     , mono-traversable
                     , mtl
                     , network
                     , optparse-applicative >= 0.11
                     , redis-fp , retry
                     , safe
                     , semigroups
                     , split
                     , stm
                     , stm-containers
                     , store
                     , streaming-commons
                     , text
                     , template-haskell
                     , thread-file-logger
                     , time
                     , transformers
                     , transformers-base
                     , unix
                     , unordered-containers
                     , uuid >= 1.3.12
                     , vector
                     , void
                     , lifted-async
                     , hashable
                     , monad-unlift
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite wq-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       TestUtils
                     , Distributed.HeartbeatSpec
                     , Distributed.RequestSlavesSpec
                     , Distributed.StatefulSpec
                     , Distributed.StatusSpec
                     , Data.Streaming.NetworkMessageSpec
                     , Data.WorkQueueSpec
                     , Control.Concurrent.ThreadPoolSpec
                     , Control.Exception.MaskSpec
  ghc-options:         -Wall
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , stm-chans
                     , lens
                     , mtl
                     , work-queue
                     , lifted-async
                     , QuickCheck
                     , async
                     , bytestring
                     , classy-prelude
                     , conduit-extra
                     , containers
                     , deepseq
                     , directory
                     , enclosed-exceptions
                     , executable-path
                     , hspec
                     , hspec-core
                     , hspec-expectations
                     , hspec-expectations-lifted
                     , lifted-base
                     , monad-control
                     , monad-logger
                     , network
                     , process
                     , random
                     , redis-fp
                     , resourcet
                     , semigroups
                     , silently
                     , split
                     , stm
                     , store
                     , streaming-commons
                     , thread-file-logger
                     , time
                     , transformers
                     , transformers-base
                     , unix
                     , unordered-containers
                     , vector
                     , uuid
                     , work-queue
                     , uuid
                     , cryptohash
                     , text

executable hpc-example-stateful
  main-is:             Main.hs
  hs-source-dirs:      examples/stateful
  default-language:    Haskell2010
  build-depends:       base
                     , redis-fp
                     , work-queue
                     , stm
                     , bytestring
                     , network
                     , enclosed-exceptions
                     , unix
                     , split
                     , classy-prelude
                     , system-fileio
                     , executable-path
                     , process
                     , silently
                     , monad-logger
                     , redis-fp
                     , lifted-base
                     , semigroups
                     , store
                     , monad-control
                     , resourcet
                     , criterion
                     , thread-file-logger
                     , directory
                     , transformers
                     , time
  ghc-options:         -Wall -threaded
