name:                work-queue
version:             0.1.1.0
synopsis:            Local and distributed work queue implementation
description:         See README.md
homepage:            https://github.com/fpco/libraries
license:             AllRightsReserved
license-file:        LICENSE
author:              Michael Snoyman
maintainer:          michael@fpcomplete.com
copyright:           FP Complete
category:            Concurrency
build-type:          Custom
extra-source-files:  README.md
cabal-version:       >= 1.10

library
  exposed-modules:     Distributed.Types
                       Data.Store.TypeHash.Orphans
                       Distributed.JobQueue.Client
                       Distributed.JobQueue.Worker
                       Distributed.JobQueue.MasterOrSlave
                       Distributed.JobQueue.StaleKeys
                       Distributed.JobQueue.Status
                       Distributed.JobQueue.Internal
                       Distributed.Redis
                       Distributed.Heartbeat
                       Distributed.RequestSlaves
                       Data.Streaming.NetworkMessage
                       Distributed.Stateful.Master
                       Distributed.Stateful.Slave
                       Distributed.Stateful
                       Distributed.Stateful.Internal
                       Distributed.Stateful.Internal.Profiling
                       Data.WorkQueue
                       Control.Concurrent.ThreadPool
                       Control.Exception.Mask
  other-modules:       Data.SimpleSupply
  build-depends:       base
                     , stm-chans
                     , lens
                     , aeson
                     , base64-bytestring
                     , bytestring
                     , classy-prelude
                     , conduit-extra
                     , containers
                     , criterion
                     , cryptohash
                     , deepseq
                     , exceptions
                     , executable-hash >= 0.2.0.0
                     , focus
                     , ghc-prim
                     , hashtables
                     , lifted-base
                     , list-t
                     , monad-control
                     , monad-logger-json-extra
                     , mono-traversable
                     , mtl
                     , network
                     , optparse-applicative >= 0.11
                     , random
                     , redis-fp
                     , retry
                     , safe
                     , semigroups
                     , split
                     , stm
                     , stm-containers
                     , store >= 0.2.0.0
                     , streaming-commons
                     , text
                     , template-haskell
                     , thread-file-logger
                     , time
                     , transformers
                     , transformers-base
                     , unix
                     , unordered-containers
                     , uuid
                     , vector
                     , void
                     , mesosync
                     , hashable
                     , monad-unlift
                     , extra
                     , unagi-chan
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite wq-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       TestUtils
                     , Distributed.HeartbeatSpec
                     , Distributed.JobQueueSpec
                     , Distributed.RequestSlavesSpec
                     , Distributed.StaleKeySpec
                     , Distributed.StatefulSpec
                     , Distributed.StatusSpec
                     , Data.Streaming.NetworkMessageSpec
                     , Data.WorkQueueSpec
                     , Control.Concurrent.ThreadPoolSpec
                     , Control.Exception.MaskSpec
  ghc-options:         -Wall
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base

                     , HUnit
                     , QuickCheck
                     , bytestring
                     , classy-prelude
                     , conduit-extra
                     , containers
                     , cryptohash
                     , deepseq
                     , directory
                     , enclosed-exceptions
                     , exceptions
                     , executable-path
                     , hspec
                     , hspec-core
                     , hspec-expectations
                     , lens
                     , lifted-base
                     , mesosync
                     , monad-control
                     , monad-logger-json-extra
                     , mtl
                     , network
                     , process
                     , random
                     , redis-fp
                     , resourcet
                     , retry
                     , semigroups
                     , silently
                     , split
                     , stm
                     , stm-chans
                     , store
                     , streaming-commons
                     , text
                     , thread-file-logger
                     , time
                     , transformers
                     , transformers-base
                     , unix
                     , unordered-containers
                     , uuid
                     , vector
                     , work-queue

executable hpc-example-stateful
  main-is:             Main.hs
  hs-source-dirs:      examples/stateful
  default-language:    Haskell2010

  build-depends:       base
                     , bytestring
                     , network
                     , enclosed-exceptions
                     , unix
                     , split
                     , classy-prelude
                     , system-fileio
                     , executable-path
                     , process
                     , silently
                     , monad-logger-json-extra
                     , redis-fp
                     , lifted-base
                     , semigroups
                     , store
                     , time
                     , transformers
                     , work-queue

  ghc-options:         -Wall -threaded

executable wq-performance
  main-is:             Main.hs
  other-modules:       PerformanceUtils
                     , PFilter
                     , Vectors
                     , KMeans
                     , TypeHash.Orphans
  hs-source-dirs:      examples/performance
  default-language:    Haskell2010
  build-depends:       base
                     , Chart
                     , Chart-cairo
                     , MonadRandom
                     , bytestring
                     , classy-prelude
                     , conduit-extra
                     , containers
                     , criterion
                     , deepseq
                     , directory
                     , erf
                     , extra
                     , lens
                     , lifted-base
                     , mesosync
                     , monad-logger
                     , optparse-applicative
                     , process
                     , random-fu
                     , random-source
                     , redis-fp
                     , retry
                     , semigroups
                     , store
                     , streaming-commons
                     , text
                     , transformers
                     , unordered-containers
                     , vector
                     , work-queue

  ghc-options:         -Wall -threaded -rtsopts -fprof-auto -funbox-strict-fields
